Corrected project element width on mobile, again.

--- a/client/src/components/pages/projects-page/projects-page.css
+++ b/client/src/components/pages/projects-page/projects-page.css
@@ -46,7 +46,7 @@
 
 @media screen and (max-width: 600px) {
   .pp-item-background, .pp-item-overlay  {
-    width: 85vw;
+    width: 80vw;
     height: 300px;
   }
 }
